fixed responsiveness on tablet

--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,12 @@ body {
   }
 }
 
+@media (min-width: 750px) {
+  .day-card {
+    width: 300px;
+  }
+}
+
 @media (min-width: 1200px) {
   .week-container {
     flex-direction: row;
